# voice-desktop-control

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  SETUP.md  TODO.md  build_dmg.sh  config.yaml  diagnostics.py  main.py  pyproject.toml  requirements.txt  setup.py
.claude/agents/: coding-1.md  coding-2.md  coding-3.md
.claude/commands/: coding-1.md  coding-2.md  coding-3.md
.github/workflows/: release.yml
actions/: accessibility.py  applescript.py  mouse_keyboard.py  screen.py  tts.py
activation/: hotkey.py  wake_word.py
agent/: cache.py  context.py  core.py  fast_path.py  tools.py
assets/: VoiceDesk.icns
config/: loader.py
docs/superpowers/plans/: 2026-07-10-window-use.md  2026-07-11-independent-actuation.md  2026-07-14-click-element-mouse-click.md
docs/superpowers/specs/: 2026-07-10-window-use-design.md  2026-07-11-independent-actuation-design.md  2026-07-14-click-element-mouse-click-design.md
llm/: __init__.py  base.py  claude_adapter.py  nvidia_adapter.py  ollama_adapter.py  openai_adapter.py
memory/: embedder.py  patterns.py  retriever.py  store.py  suggester.py  summarizer.py
metrics/: aggregator.py  collector.py  error_log.py
routines/: detector.py  manager.py
safety/: guard.py
scratch/: check_mic.py  preview_notch_hud.py  probe_ax.py  probe_ax2.py  test_oww.py
stt/: __init__.py  base.py  confirm.py  macos_speech.py  whisper_api.py  whisper_local.py
tests/: conftest.py  test_actions.py  test_activation.py  test_agent.py  test_config.py  test_diagnostics.py  test_error_log.py  test_llm.py  test_main.py  test_memory.py  test_metrics.py  test_notch_hud.py  test_routines.py  test_safety.py  test_settings.py  test_stt.py  test_suggester.py
ui/: animations.py  menubar.py  notch_hud.py
ui/settings/: actions.py  edit_menu.py  page_about.py  page_error_log.py  page_general.py  page_llm.py  page_metrics.py  page_permissions.py  page_profile.py  page_routines.py  page_stt.py  page_tts.py  window.py
ui/swift_hud/: VoiceDeskHUD.swift  __init__.py
