[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voicedesk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
voicedesk = "main:main"

[tool.py2app]
app = ["main.py"]
argv_emulation = false
packages = [
    "anthropic", "openai", "pyautogui", "pynput",
    "faster_whisper", "sounddevice", "numpy", "PIL",
    "rumps", "pyobjc", "AppKit", "Quartz", "yaml", "matplotlib",
    "openwakeword",
]
